--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </div>
-            <p class="social-text">design by <b><span style="color: #5995fd;">UMAR FAROOQ</span></b></p>
+            <p class="social-text">design by <b><span style="color: #5995fd;">Kounser Ali Mir</span></b></p>
           </form>
           <form action="#" class="sign-up-form">
             <h2 class="title">Sign up</h2>
